<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GroundSdk Demo</string>
    <string name="title_activity_manual_copter_settings">Manual Copter Settings</string>
    <string name="title_activity_magnetometer_calibration">Magneto Calibration</string>
    <string name="title_activity_return_home_settings">Return Home Settings</string>
    <string name="title_activity_flight_plan_settings">Flight Plan Settings</string>
    <string name="title_activity_follow_me_settings">Follow Me Settings</string>
    <string name="title_activity_guided_edit">Guided Flight Edition</string>
    <string name="title_activity_poi_edit">Point Of Interest Edition</string>
    <string name="title_activity_target_tracker_settings">Target Tracker Settings</string>
    <string name="title_activity_wifi_ap_settings">Wifi Access Point Settings</string>
    <string name="title_activity_camera_settings">Camera settings</string>
    <string name="title_activity_antiflicker_settings">Anti-flicker settings</string>
    <string name="title_activity_gimbal_settings">Gimbal settings</string>
    <string name="title_activity_gimbal_offsets_correction">Gimbal offsets correction</string>
    <string name="title_activity_gimbal_calibration">Gimbal calibration</string>
    <string name="title_activity_geofence_settings">Geofence settings</string>
    <string name="title_activity_leds_settings">LEDs Settings</string>
    <string name="title_activity_firmware_manager">Firmwares</string>
    <string name="title_activity_drone_finder">Drone Finder</string>
    <string name="title_activity_sc2_settings">Gamepad settings</string>
    <string name="title_activity_sc2_grab">Inputs grab setup</string>
    <string name="title_activity_sc2_mapping">Mappings</string>
    <string name="title_activity_sc2_axes_setup">Axes setup</string>
    <string name="title_activity_copilot">Copilot settings</string>
    <string name="title_activity_media_browser">Browse Media</string>
    <string name="title_activity_debug_settings">Debug Settings</string>
    <string name="title_activity_precise_home_settings">Precise Home Settings</string>
    <string name="title_activity_thermal_settings">Thermal Settings</string>
    <string name="title_activity_user_account">User Account</string>
    <string name="title_activity_facilities">Facilities</string>
    <string name="title_activity_piloting_control">Piloting Control</string>
    <string name="title_activity_dri_settings">DRI Settings</string>
    <string name="title_dialog_password">Enter password</string>
    <string name="title_dialog_download_media">Downloading media</string>
    <string name="title_dialog_delete_media">Deleting media</string>
    <string name="title_dialog_delete_all_media">Deleting all media</string>
    <string name="title_dialog_connector_choice">Choose connector</string>
    <string name="title_dialog_wifi_auto_mode_choice">Choose band</string>
    <string name="title_dialog_animation_choice">Choose animation</string>
    <string name="title_dialog_flip_direction_choice">Choose flip direction</string>
    <string name="title_dialog_format">Formatting options</string>
    <string name="title_dialog_media_resources">Resources</string>
    <string name="title_dialog_edit_color">Edit color</string>
    <string name="title_dialog_storage_password">Enter Password and Usage</string>
    <string name="title_dialog_pick_certificate_file">Select certificate file</string>
    <string name="title_debug_tag">Send debug tag</string>
    <string name="label_password">Password</string>
    <string name="label_storage_name">Storage Name</string>
    <string name="label_debug_tag">Debug tag</string>
    <string name="known">KNOWN</string>
    <string name="unknown">UNKNOWN</string>
    <string name="unsupported">N/A</string>
    <string name="no_value">--</string>
    <string name="no_error">No error</string>
    <string name="action_hud">HUD</string>
    <string name="action_hmd">HMD</string>
    <string name="action_forget">Forget</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_edit">Edit</string>
    <string name="action_activate">Activate</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_clear">Clear</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="action_scan">Scan</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_see_stream">See stream</string>
    <string name="action_see_thermal_stream">See thermal stream</string>
    <string name="action_grab">Grab</string>
    <string name="action_release">Release</string>
    <string name="action_edit_mappings">Mappings</string>
    <string name="action_new_mapping">New mapping</string>
    <string name="action_reset_mapping">Reset mapping</string>
    <string name="action_prepare_update">Prepare update</string>
    <string name="action_update">Update</string>
    <string name="action_factory_reset">Factory reset</string>
    <string name="action_reset_settings">Reset settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_start_alert_sound">Start alert</string>
    <string name="action_stop_alert_sound">Stop alert</string>
    <string name="action_edit_axes_setup">Axes setup</string>
    <string name="action_browse">Browse</string>
    <string name="action_download">Download</string>
    <string name="action_see_debug_settings">Debug Settings</string>
    <string name="action_upload">Upload</string>
    <string name="action_play">Play</string>
    <string name="action_stop">Stop</string>
    <string name="action_autoselect_channel">Auto select channel</string>
    <string name="action_change_password">Change password</string>
    <string name="action_abort">Abort</string>
    <string name="action_start_anim">Start animation</string>
    <string name="action_move_to_location">Move to location</string>
    <string name="action_move_to_relative_position">Move to relative position</string>
    <string name="action_stop_current_move">Stop current move</string>
    <string name="action_format">Format</string>
    <string name="action_start_recording">Start recording</string>
    <string name="action_stop_recording">Stop recording</string>
    <string name="action_start_photo_capture">Start photo capture</string>
    <string name="action_stop_photo_capture">Stop photo capture</string>
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_restart">Restart</string>
    <string name="action_start_piloted_poi">Start piloted POI</string>
    <string name="action_stop_piloted_poi">Stop piloted POI</string>
    <string name="action_enable_tracking">Enable controller tracking</string>
    <string name="action_disable_tracking">Disable controller tracking</string>
    <string name="action_start_offsets_correction">Start offsets correction</string>
    <string name="action_set_user_account">Set user account</string>
    <string name="action_add_color">Add color</string>
    <string name="action_send_palette">Send palette</string>
    <string name="action_send_rendering">Send rendering</string>
    <string name="action_ok">OK</string>
    <string name="action_enter_password">Enter password</string>
    <string name="action_decrypt">Decrypt</string>
    <string name="action_deactivate_log_storage">Deactivate log storage</string>
    <string name="action_debug_tag">Send debug tag</string>
    <string name="action_send">Send</string>
    <string name="action_dri_type_reset">Reset type configuration</string>
    <string name="header_instruments">Instruments</string>
    <string name="header_piloting_itf">Piloting interfaces</string>
    <string name="header_peripherals">Peripherals</string>
    <string name="property_piloting_itf_state">State</string>
    <string name="property_smart_takeoff_land">Smart Take-off/Land</string>
    <string name="property_takeoff_land">Take-off/Land</string>
    <string name="property_max_altitude">Max. altitude</string>
    <string name="property_min_altitude">Min. altitude</string>
    <string name="property_hovering_altitude">Hovering altitude</string>
    <string name="property_max_distance">Max. distance</string>
    <string name="property_max_pitch_roll">Max. pitch/roll</string>
    <string name="property_max_pitch_roll_velocity">Max. pitch/roll velocity</string>
    <string name="property_max_vertical_speed">Max. vertical speed</string>
    <string name="property_max_yaw_speed">Max. yaw rotation speed</string>
    <string name="property_banked_turn_mode">Banked-turn mode</string>
    <string name="property_thrown_take_off">Thrown take-off</string>
    <string name="property_reporter_uploading">Uploading</string>
    <string name="property_reporter_pending_count">Reports to upload</string>
    <string name="property_altimeter_takeoff_altitude">Take off altitude</string>
    <string name="property_altimeter_ground_altitude">Ground altitude</string>
    <string name="property_altimeter_absolute_altitude">Absolute altitude</string>
    <string name="property_altimeter_vertical_speed">Vertical speed</string>
    <string name="property_antiflicker_mode">Mode</string>
    <string name="property_antiflicker_value">Value</string>
    <string name="property_attitude_pitch">Pitch</string>
    <string name="property_attitude_roll">Roll</string>
    <string name="property_compass_heading">Heading</string>
    <string name="property_flying_indicators_state">State</string>
    <string name="property_flying_indicators_landed_state">Landed state</string>
    <string name="property_flying_indicators_flying_state">Flying state</string>
    <string name="property_gps_fixed">Fixed</string>
    <string name="property_return_home_reason">Return reason</string>
    <string name="property_home_location">Home location</string>
    <string name="property_current_target">Current target</string>
    <string name="property_gps_fixed_on_takeoff">Fixed on take-off</string>
    <string name="property_auto_trigger">Auto trigger</string>
    <string name="property_preferred_target">Preferred target</string>
    <string name="property_ending_behaviour">Ending behaviour</string>
    <string name="property_autostart_on_disconnect_delay">Autostart on disconnect delay</string>
    <string name="property_home_reachability">Home reachability</string>
    <string name="property_warning_trigger_delay">Warning trigger delay</string>
    <string name="property_camera_active_state">Active</string>
    <string name="property_camera_mode">Mode</string>
    <string name="property_camera_exposure">Exposure</string>
    <string name="property_camera_exposure_lock">Exposure lock</string>
    <string name="property_camera_ev_compensation">EV compensation</string>
    <string name="property_camera_white_balance">White balance</string>
    <string name="property_camera_white_balance_lock">White balance lock</string>
    <string name="property_camera_photo_state">Photo state</string>
    <string name="property_camera_recording_state">Recording state</string>
    <string name="property_camera_auto_record">Auto-record</string>
    <string name="property_camera_hdr">HDR</string>
    <string name="property_camera_style">Style</string>
    <string name="property_camera_alignment">Alignment</string>
    <string name="property_camera_zoom_info">Zoom info</string>
    <string name="can_take_off">Can take off</string>
    <string name="piloting_itf_manual_copter">Manual Copter</string>
    <string name="piloting_itf_return_home">Return Home</string>
    <string name="peripheral_camera_thermal">Thermal Camera</string>
</resources>