<?xml version="1.0" encoding="utf-8"?>

<!--
  ~     Copyright (C) 2019 Parrot Drones SAS
  ~
  ~     Redistribution and use in source and binary forms, with or without
  ~     modification, are permitted provided that the following conditions
  ~     are met:
  ~     * Redistributions of source code must retain the above copyright
  ~       notice, this list of conditions and the following disclaimer.
  ~     * Redistributions in binary form must reproduce the above copyright
  ~       notice, this list of conditions and the following disclaimer in
  ~       the documentation and/or other materials provided with the
  ~       distribution.
  ~     * Neither the name of the Parrot Company nor the names
  ~       of its contributors may be used to endorse or promote products
  ~       derived from this software without specific prior written
  ~       permission.
  ~
  ~     THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~     "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~     LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
  ~     FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
  ~     PARROT COMPANY BE LIABLE FOR ANY DIRECT, INDIRECT,
  ~     INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
  ~     BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
  ~     OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
  ~     AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~     OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
  ~     OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  ~     SUCH DAMAGE.
  ~
  -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:contentPadding="@dimen/content_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="0">

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical|start"
                android:text="@string/piloting_itf_return_home"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Button
                android:id="@android:id/edit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="center_vertical|end"
                android:text="@string/action_edit"
                tools:ignore="ContentDescription"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_piloting_itf_state"/>

            <TextView
                android:id="@+id/state"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="ACTIVE"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/property_auto_trigger"/>

            <TextView
                android:id="@+id/autoTriggerSwitch"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="ON"/>
        </TableRow>


        <TableRow>

            <TextView
                android:text="@string/property_return_home_reason"/>

            <TextView
                android:id="@+id/reason"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="USER_REQUESTED"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_home_location"/>

            <TextView
                android:id="@+id/location"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="12.3 °N, 45.6°W"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_current_target"/>

            <TextView
                android:id="@+id/currentTarget"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="CONTROLLER_POSITION"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_gps_fixed_on_takeoff"/>

            <TextView
                android:id="@+id/fixed"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="True"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_preferred_target"/>

            <TextView
                android:id="@+id/preferredTarget"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="TAKE_OFF_POSITION"/>
        </TableRow>


        <TableRow>

            <TextView
                android:text="@string/property_ending_behaviour"/>

            <TextView
                android:id="@+id/endingBehavior"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="LANDING"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_autostart_on_disconnect_delay"/>

            <TextView
                android:id="@+id/delay"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="10 s"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_min_altitude"/>

            <TextView
                android:id="@+id/min_altitude"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="20 m"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/property_hovering_altitude"/>

            <TextView
                android:id="@+id/hovering_altitude"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="20 m"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/property_home_reachability"/>

            <TextView
                android:id="@+id/reachability"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="NOT_REACHABLE"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_warning_trigger_delay"/>

            <TextView
                android:id="@+id/trigger_date"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="00:00"/>
        </TableRow>

        <Button
            android:id="@+id/activate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"
            tools:text="@string/action_deactivate"/>

    </TableLayout>

</androidx.cardview.widget.CardView>
