<?xml version="1.0" encoding="utf-8"?>

<!--
  ~     Copyright (C) 2019 Parrot Drones SAS
  ~
  ~     Redistribution and use in source and binary forms, with or without
  ~     modification, are permitted provided that the following conditions
  ~     are met:
  ~     * Redistributions of source code must retain the above copyright
  ~       notice, this list of conditions and the following disclaimer.
  ~     * Redistributions in binary form must reproduce the above copyright
  ~       notice, this list of conditions and the following disclaimer in
  ~       the documentation and/or other materials provided with the
  ~       distribution.
  ~     * Neither the name of the Parrot Company nor the names
  ~       of its contributors may be used to endorse or promote products
  ~       derived from this software without specific prior written
  ~       permission.
  ~
  ~     THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~     "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~     LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
  ~     FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
  ~     PARROT COMPANY BE LIABLE FOR ANY DIRECT, INDIRECT,
  ~     INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
  ~     BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
  ~     OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
  ~     AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~     OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
  ~     OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  ~     SUCH DAMAGE.
  ~
  -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:contentPadding="@dimen/content_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="0">

        <TableRow>

            <TextView
                android:id="@android:id/title"
                android:layout_gravity="center_vertical|start"
                android:text="@string/piloting_itf_manual_copter"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Button
                android:id="@android:id/edit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="center_vertical|end"
                android:text="@string/action_edit"
                tools:ignore="ContentDescription"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_piloting_itf_state"/>

            <TextView
                android:id="@+id/state"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="ACTIVE"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_smart_takeoff_land"/>

            <TextView
                android:id="@+id/smart_takeoffland"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="NONE"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_takeoff_land"/>

            <TextView
                android:id="@+id/can_takeoffland"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="@string/can_take_off"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_max_pitch_roll"/>

            <TextView
                android:id="@+id/maxPitchRoll"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="0.1/2.3/4.5"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_max_pitch_roll_velocity"/>

            <TextView
                android:id="@+id/maxPitchRollVelocity"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="0.1/2.3/4.5"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_max_vertical_speed"/>

            <TextView
                android:id="@+id/maxVerticalSpeed"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="0.1/2.3/4.5"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_max_yaw_speed"/>

            <TextView
                android:id="@+id/maxYawSpeed"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="0.1/2.3/4.5"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_banked_turn_mode"/>

            <TextView
                android:id="@+id/bankedTurnMode"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="ON"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/property_thrown_take_off"/>

            <TextView
                android:id="@+id/thrownTakeOffSetting"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                tools:text="ON"/>
        </TableRow>

        <Button
            android:id="@+id/activate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"
            tools:text="@string/action_deactivate"/>

    </TableLayout>

</androidx.cardview.widget.CardView>
